src/index.css
:root {
  --color-primary: #a06cd5;

  /*  */
  --color-secondary: #ffcb03;
  --color-tertiary: #ff585f;
  --color-primary-darker: #4bbb7d;
  --color-secondary-darker: #ffbb00;
  --color-tertiary-darker: #fd424b;
  --color-primary-opacity: #5ec5763a;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
  box-sizing: border-box;
}

body {
  background-color: #383838;
  background-size: cover;
  font-family: "Poppins", "Inter", sans-serif;
  color: #fff;
  font-weight: 300;
  line-height: 1.9;
  font-size: 1.7rem;
  padding: 2% 10%;
}

@media (max-width: 76em) {
  body {
    padding: 1% 8%;
  }
}

@media (max-width: 54em) {
  body {
    padding: 1% 6%;
  }
}

@media (max-width: 47em) {
  body {
    padding: 0 5%;
  }
}

@media (max-width: 37em) {
  body {
    padding: 0 0;
    background-color: #383838;
  }
}

